[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpoa_lib"
version = "0.1.0"

requires-python = ">=3.8"
authors = [
  {name = "Valery Sinelnikov", email = "greh@altlinux.org"},
]
description = "Shared library for GPOA - GPO Applier for Linux"
license = {text = "GPLv3+"}

[project.urls]
Repository = "https://github.com/altlinux/gpupdate"

[tool.hatch.build.targets.wheel]
packages = ["gpoa_lib"]
