[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpoa_lib"
version = "0.15.0"

requires-python = ">=3.8"
authors = [
  {name = "Valery Sinelnikov", email = "greh@altlinux.org"},
]
description = "Shared library for GPOA - GPO Applier for Linux"
license = {text = "GPLv3+"}

[project.dependencies]
jinja2 = ">=3.0"
defusedxml = ">=0.7"
configobj = ">=5.0"
PyGObject = ">=3.0"
dbus-python = ">=1.0"

[project.optional-dependencies]
samba = ["samba"]
ldap = ["python-ldap"]
laps = ["psutil", "python-dateutil"]
monitoring = ["psutil"]

[project.urls]
Repository = "https://github.com/altlinux/gpupdate"

[tool.hatch.build.targets.wheel]
packages = ["gpoa_lib"]
